--- a/Alivia/src/main/resources/templates/index.html
+++ b/Alivia/src/main/resources/templates/index.html
@@ -6,17 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="generator" content="Mobirise v5.3.0, mobirise.com">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/logo5.png" type="image/x-icon">
   <meta name="description" content="">
   
   
   <title>Home</title>
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="/tether/tether.min.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="/theme/css/style.css">
+  <link rel="preload" as="style" href="/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
@@ -47,7 +47,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="page1.html" class="text-primary"><strong>Inspiration</strong></a></h5>
+                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="../static/page1.html" class="text-primary"><strong>Inspiration</strong></a></h5>
                 
             </div>
             <div class="col-md-12 col-lg-6">
@@ -63,7 +63,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md">
                 <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2">
-                    <a href="page2.html" class="text-primary"><strong>Education</strong></a></h5>
+                    <a href="../static/page2.html" class="text-primary"><strong>Education</strong></a></h5>
                 
             </div>
             <div class="col-md-12 col-lg-6">
@@ -78,7 +78,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="page3.html" class="text-primary"><strong>Stocks</strong></a><strong><br></strong></h5>
+                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="../static/page3.html" class="text-primary"><strong>Stocks</strong></a><strong><br></strong></h5>
                 
             </div>
             <div class="col-md-12 col-lg-6">
@@ -93,7 +93,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="page5.html" class="text-primary"><strong>Soft</strong></a></h5>
+                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="../static/page5.html" class="text-primary"><strong>Soft</strong></a></h5>
                 
             </div>
             <div class="col-md-12 col-lg-6">
@@ -108,7 +108,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="page4.html" class="text-primary"><strong>Clouds</strong></a></h5>
+                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="../static/page4.html" class="text-primary"><strong>Clouds</strong></a></h5>
                 
             </div>
             <div class="col-md-12 col-lg-6">
@@ -133,7 +133,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web creator - <a href="https://mobirise.site/p" style="color:#aaa;">Get more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaaaaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web creator - <a href="https://mobirise.site/p" style="color:#aaa;">Get more</a></p></section><script src="../assets/web/assets/jquery/jquery.min.js"></script>  <script src="../assets/popper/popper.min.js"></script>  <script src="../assets/tether/tether.min.js"></script>  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/parallax/jarallax.min.js"></script>  <script src="../assets/theme/js/script.js"></script>
   
   
 </body>
