--- a/Alivia/src/main/resources/templates/page1.html
+++ b/Alivia/src/main/resources/templates/page1.html
@@ -6,20 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="generator" content="Mobirise v5.3.0, mobirise.com">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="">
   
   
   <title>Inspiration</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="../assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="../assets/tether/tether.min.css">
+  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="../assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="../assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="../assets/theme/css/style.css">
+  <link rel="preload" as="style" href="../assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="../assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
@@ -68,7 +68,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/product2.jpg" alt="" title="" data-slide-to="1">
+                        <img src="../assets/images/product2.jpg" alt="" title="" data-slide-to="1">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>National Geographic Photography</strong></h5>
@@ -81,7 +81,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/product1.jpg" alt="" title="" data-slide-to="2">
+                        <img src="../assets/images/product1.jpg" alt="" title="" data-slide-to="2">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Word Press Photo</strong></h5>
@@ -93,7 +93,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/product3.jpg" alt="" title="" data-slide-to="0">
+                        <img src="../assets/images/product3.jpg" alt="" title="" data-slide-to="0">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>MagnumPhotos</strong></h5>
@@ -105,7 +105,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1920x1134.jpg" alt="" title="" data-slide-to="3">
+                        <img src="../assets/images/mbr-1920x1134.jpg" alt="" title="" data-slide-to="3">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Royal Photographic Society</strong></h5>
@@ -117,7 +117,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1920x1357.jpg" alt="" title="" data-slide-to="4">
+                        <img src="../assets/images/mbr-1920x1357.jpg" alt="" title="" data-slide-to="4">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Phase</strong></h5>
@@ -129,7 +129,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-2-1920x1280.jpg" alt="" title="" data-slide-to="5">
+                        <img src="../assets/images/mbr-2-1920x1280.jpg" alt="" title="" data-slide-to="5">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Unsplash</strong></h5>
@@ -141,7 +141,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1920x1080.jpg" alt="" title="" data-slide-to="6">
+                        <img src="../assets/images/mbr-1920x1080.jpg" alt="" title="" data-slide-to="6">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>500px</strong></h5>
@@ -153,7 +153,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1920x1091.jpg" alt="" title="" data-slide-to="7">
+                        <img src="../assets/images/mbr-1920x1091.jpg" alt="" title="" data-slide-to="7">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Pinterest</strong></h5>
@@ -183,7 +183,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to create a website - <a href="https://mobirise.site/x" style="color:#aaa;">Click here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to create a website - <a href="https://mobirise.site/x" style="color:#aaa;">Click here</a></p></section><script src="../assets/web/assets/jquery/jquery.min.js"></script>  <script src="../assets/popper/popper.min.js"></script>  <script src="../assets/tether/tether.min.js"></script>  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/dropdown/js/nav-dropdown.js"></script>  <script src="../assets/dropdown/js/navbar-dropdown.js"></script>  <script src="../assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="../assets/theme/js/script.js"></script>
   
   
 </body>
