--- a/Alivia/src/main/resources/templates/index.html
+++ b/Alivia/src/main/resources/templates/index.html
@@ -6,21 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="generator" content="Mobirise v5.3.0, mobirise.com">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="">
   
   
   <title>Home</title>
-  <link rel="stylesheet" href="/tether/tether.min.css">
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="/theme/css/style.css">
-  <link rel="preload" as="style" href="/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="/mobirise/css/mbr-additional.css" type="text/css">
-  
-  
-  
-  
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+
 </head>
 <body>
   
@@ -42,77 +39,93 @@
     </div>
 </section>
 
-<section class="content10 cid-sreRYV0qtZ" id="content10-11">
-    
-    <div class="container-fluid">
+<section class="header18 cid-srWvoYhZgk mbr-fullscreen" id="header18-1s">
+
+    <div class="align-center container">
         <div class="row justify-content-center">
-            <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="../static/page1.html" class="text-primary"><strong>Inspiration</strong></a></h5>
+            <div class="col-12 col-lg-10">
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Inspiration</strong></h1>
                 
-            </div>
-            <div class="col-md-12 col-lg-6">
-                <p class="mbr-text mbr-fonts-style display-7">This section contains a selection of sources with the work of photographers from around the world.</p>
+                <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                    This section contains a selection of sources with the work of photographers from around the world
+                </p>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="page1.html">Find your inspiration!</a></div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="content10 cid-sreRYYcFk8" id="content10-12">
-    
-    <div class="container-fluid">
+<section class="header18 cid-srWw2VBIfT mbr-fullscreen" id="header18-1u">
+
+    <div class="align-center container">
         <div class="row justify-content-center">
-            <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2">
-                    <a href="../static/page2.html" class="text-primary"><strong>Education</strong></a></h5>
+            <div class="col-12 col-lg-10">
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Education</strong></h1>
                 
-            </div>
-            <div class="col-md-12 col-lg-6">
-                <p class="mbr-text mbr-fonts-style display-7">This section will help you start your career as a photographer or help you gain new knowledge in the field of processing and shooting. The section contains sources with training materials</p>
+                <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                    This section will help you start your career as a photographer or help you gain new knowledge in the field of processing and shooting. The section contains sources with training materials
+                </p>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="page2.html">Start your path here</a></div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="content10 cid-sreRZfmmvI" id="content10-13">
+<section class="header18 cid-srWw3Eein1 mbr-fullscreen" id="header18-1v">
+
     
-    <div class="container-fluid">
+
+    
+
+    <div class="align-center container">
         <div class="row justify-content-center">
-            <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="../static/page3.html" class="text-primary"><strong>Stocks</strong></a><strong><br></strong></h5>
+            <div class="col-12 col-lg-10">
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Stocks</strong></h1>
                 
-            </div>
-            <div class="col-md-12 col-lg-6">
-                <p class="mbr-text mbr-fonts-style display-7">The sources that are in this section will help you find a site where you can implement your work</p>
+                <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                    The sources that are in this section will help you find a site where you can implement your work
+                </p>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="page3.html">Find your stock!&nbsp;</a></div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="content10 cid-sreRZmcsiL" id="content10-14">
+<section class="header18 cid-srWw70tAot mbr-fullscreen" id="header18-1w">
+
     
-    <div class="container-fluid">
+
+    
+
+    <div class="align-center container">
         <div class="row justify-content-center">
-            <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="../static/page5.html" class="text-primary"><strong>Soft</strong></a></h5>
+            <div class="col-12 col-lg-10">
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Soft</strong></h1>
                 
-            </div>
-            <div class="col-md-12 col-lg-6">
-                <p class="mbr-text mbr-fonts-style display-7">Here you can find applications that can be useful in processing</p>
+                <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                    Here you can find applications that can be useful in processing
+                </p>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="page5.html">Find your editor!</a></div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="content10 cid-sreRZU85F1" id="content10-15">
+<section class="header18 cid-srWw7uPDc2 mbr-fullscreen" id="header18-1x">
+
     
-    <div class="container-fluid">
+
+    
+
+    <div class="align-center container">
         <div class="row justify-content-center">
-            <div class="col-12 col-md">
-                <h5 class="mbr-section-title mbr-fonts-style mb-4 display-2"><a href="../static/page4.html" class="text-primary"><strong>Clouds</strong></a></h5>
+            <div class="col-12 col-lg-10">
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Clouds</strong></h1>
                 
-            </div>
-            <div class="col-md-12 col-lg-6">
-                <p class="mbr-text mbr-fonts-style display-7">Here is a selection of cloud services on which you can store your work</p>
+                <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                    Here is a selection of cloud services on which you can store your work
+                </p>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="page4.html">Find your cloud!</a></div>
             </div>
         </div>
     </div>
@@ -127,13 +140,11 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    SKYDRAGON Alivia
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">SKYDRAGON Alivia&nbsp;</p>
             </div>
         </div>
     </div>
-</section><section style="background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaaaaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web creator - <a href="https://mobirise.site/p" style="color:#aaa;">Get more</a></p></section><script src="../assets/web/assets/jquery/jquery.min.js"></script>  <script src="../assets/popper/popper.min.js"></script>  <script src="../assets/tether/tether.min.js"></script>  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/parallax/jarallax.min.js"></script>  <script src="../assets/theme/js/script.js"></script>
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Click for more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
