--- a/Alivia/src/main/resources/templates/page1.html
+++ b/Alivia/src/main/resources/templates/page1.html
@@ -6,20 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="generator" content="Mobirise v5.3.0, mobirise.com">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="../assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="">
   
   
   <title>Inspiration</title>
-  <link rel="stylesheet" href="../assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="../assets/tether/tether.min.css">
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="../assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="../assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="../assets/theme/css/style.css">
-  <link rel="preload" as="style" href="../assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="../assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
@@ -63,16 +63,16 @@
     <div class="mbr-overlay"></div>
     <div class="container-fluid">
         
-        <div class="row mt-4">
+        <div id="body" class="row mt-4">
             
             <div class="item features-image сol-12 col-md-6 col-lg-3 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/product2.jpg" alt="" title="" data-slide-to="1">
+                        <img src="assets/images/ng-logo-807x319.jpg" alt="" title="" data-slide-to="1">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>National Geographic Photography</strong></h5>
-                        
+
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Stunning wildlife photography</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.nationalgeographic.com/photography/" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
@@ -81,7 +81,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/product1.jpg" alt="" title="" data-slide-to="2">
+                        <img src="assets/images/wpp-807x424.jpg" alt="" title="" data-slide-to="2">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Word Press Photo</strong></h5>
@@ -93,7 +93,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/product3.jpg" alt="" title="" data-slide-to="0">
+                        <img src="assets/images/magnum-sharing-overlay-807x424.jpg" alt="" title="" data-slide-to="0">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>MagnumPhotos</strong></h5>
@@ -105,7 +105,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/mbr-1920x1134.jpg" alt="" title="" data-slide-to="3">
+                        <img src="assets/images/rps-main-identity-rgb-72dpi-408x245.jpg" alt="" title="" data-slide-to="3">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Royal Photographic Society</strong></h5>
@@ -117,7 +117,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/mbr-1920x1357.jpg" alt="" title="" data-slide-to="4">
+                        <img src="assets/images/-750x750.png" alt="" title="" data-slide-to="4">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Phase</strong></h5>
@@ -129,7 +129,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/mbr-2-1920x1280.jpg" alt="" title="" data-slide-to="5">
+                        <img src="assets/images/7504091c-8b74-4c6a-a471-b1d2d06cec46-cover-807x404.jpg" alt="" title="" data-slide-to="5">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Unsplash</strong></h5>
@@ -141,7 +141,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/mbr-1920x1080.jpg" alt="" title="" data-slide-to="6">
+                        <img src="assets/images/500px-wallpaper-desktop1-807x538.jpg" alt="" title="" data-slide-to="6">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>500px</strong></h5>
@@ -153,7 +153,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/mbr-1920x1091.jpg" alt="" title="" data-slide-to="7">
+                        <img src="assets/images/logo-1-807x457.jpg" alt="" title="" data-slide-to="7">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Pinterest</strong></h5>
@@ -177,13 +177,11 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2025 Mobirise - All Rights Reserved
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">SKYDRAGON Alivia&nbsp;</p>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to create a website - <a href="https://mobirise.site/x" style="color:#aaa;">Click here</a></p></section><script src="../assets/web/assets/jquery/jquery.min.js"></script>  <script src="../assets/popper/popper.min.js"></script>  <script src="../assets/tether/tether.min.js"></script>  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/dropdown/js/nav-dropdown.js"></script>  <script src="../assets/dropdown/js/navbar-dropdown.js"></script>  <script src="../assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="../assets/theme/js/script.js"></script>
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">More</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
