--- a/Alivia/src/main/resources/templates/page5.html
+++ b/Alivia/src/main/resources/templates/page5.html
@@ -6,20 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="generator" content="Mobirise v5.3.0, mobirise.com">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="../assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="">
   
   
   <title>Soft</title>
-  <link rel="stylesheet" href="../assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="../assets/tether/tether.min.css">
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="../assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="../assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="../assets/theme/css/style.css">
-  <link rel="preload" as="style" href="../assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="../assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
@@ -45,7 +45,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="../static/page1.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
                             Inspiration</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
                             Education</a></li>
@@ -67,12 +67,12 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/product2.jpg" alt="" title="">
+                        <img src="assets/images/jpg.webp" alt="" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Design</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Adobe Photoshop</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website Design</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Needs no introduction</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
                             &gt;</a></div>
@@ -81,12 +81,12 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/product3.jpg" alt="" title="">
+                        <img src="assets/images/s-hpfu1i-400x400.png" alt="" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Programming</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Adobe Lightroom</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"></h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Adobe's photo processing product. Less bulky than Photoshop</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
                             &gt;</a></div>
@@ -94,12 +94,12 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/mbr-1920x1357.jpg" alt="" title="" data-slide-to="2">
+                        <img src="assets/images/apps.47788.13517568566615301.163f0514-dc3a-4458-b2ff-ce9a9666723e-200x200.png" alt="" title="" data-slide-to="2">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Programming</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>paint.net</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"></h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">A fairly primitive editor for Windows, but quite suitable for performing basic operations</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
                             &gt;</a></div>
@@ -108,13 +108,12 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="../assets/images/product1.jpg" alt="" title="" data-slide-to="3">
+                        <img src="assets/images/img-facebook-960x540.jpg" alt="" title="" data-slide-to="3">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Pixelmator</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Powerful photo editor for macOS</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
                             &gt;</a></div>
@@ -134,13 +133,11 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2025 Mobirise - All Rights Reserved
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">SKYDRAGON Alivia&nbsp;</p>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/d" style="color:#aaa;">This website</a> was created with Mobirise</p></section><script src="../assets/web/assets/jquery/jquery.min.js"></script>  <script src="../assets/popper/popper.min.js"></script>  <script src="../assets/tether/tether.min.js"></script>  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/dropdown/js/nav-dropdown.js"></script>  <script src="../assets/dropdown/js/navbar-dropdown.js"></script>  <script src="../assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="../assets/theme/js/script.js"></script>
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/d" style="color:#aaa;">This site</a> was built with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
